# docs/swagger.json
@@ -1,8 +1,8 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample server.",
-        "title": "Example API",
+        "description": "Document API Test K-Style Hub,",
+        "title": "Document API",
         "termsOfService": "http://example.com/terms/",
         "contact": {
             "name": "API Support",
@@ -18,14 +18,14 @@
     "host": "localhost:3000",
     "basePath": "/",
     "paths": {
-        "/api/admin/": {
-            "get": {
+        "/api/admin/product/create": {
+            "post": {
                 "security": [
                     {
                         "BearerAuth": []
                     }
                 ],
-                "description": "Login Akun untuk mengorder",
+                "description": "Membuat Product yang akan dijual",
                 "consumes": [
                     "application/json"
                 ],
@@ -33,9 +33,20 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Customer Management"
+                    "Order Management"
                 ],
-                "summary": "Login Akun",
+                "summary": "Create Product",
+                "parameters": [
+                    {
+                        "description": "insert data",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.CreateProduct"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -46,14 +57,9 @@
                 }
             }
         },
-        "/api/admin/update": {
-            "post": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Login Akun untuk mengorder",
+        "/api/admin/product/delete": {
+            "delete": {
+                "description": "Menghapus Product",
                 "consumes": [
                     "application/json"
                 ],
@@ -61,9 +67,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Customer Management"
+                    "Order Management"
                 ],
-                "summary": "Login Akun",
+                "summary": "Delete Product",
                 "parameters": [
                     {
                         "description": "insert data",
@@ -71,7 +77,98 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.Login"
+                            "$ref": "#/definitions/request.UpdateProduct"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/admin/product/list": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "List Data Product",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Order Management"
+                ],
+                "summary": "List Product",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "default": 0,
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "default": 0,
+                        "description": "Items per page",
+                        "name": "size",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Filter kategori",
+                        "name": "kategori",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/admin/product/update": {
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Merubah Product yang akan dijual",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Order Management"
+                ],
+                "summary": "Update Product",
+                "parameters": [
+                    {
+                        "description": "insert data",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.CreateProduct"
                         }
                     }
                 ],
@@ -95,7 +192,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Login"
+                    "Authentikasi Management"
                 ],
                 "summary": "Login Akun",
                 "parameters": [
@@ -121,7 +218,7 @@
         },
         "/api/register": {
             "post": {
-                "description": "Mendaftar Akun",
+                "description": "Untuk menentukan RoleId 1 adalah Admin dan 2 Adalah Customer",
                 "consumes": [
                     "application/json"
                 ],
@@ -129,7 +226,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Register"
+                    "Authentikasi Management"
                 ],
                 "summary": "Register Akun",
                 "parameters": [
@@ -153,8 +250,114 @@
                 }
             }
         },
+        "/api/users/detail": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get Detail Data Akun",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Customer Management"
+                ],
+                "summary": "Get Detail Akun",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/users/payment/accept-payment": {
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Hanya Role Admin yang dapat menggunakan akses ini",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Customer Management"
+                ],
+                "summary": "Accept Payment Transaction",
+                "parameters": [
+                    {
+                        "description": "insert data",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.AcceptTransaksi"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
         "/api/users/payment/create": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Create Transaksi",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Customer Management"
+                ],
+                "summary": "Order Product",
+                "parameters": [
+                    {
+                        "description": "insert data",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.CreateTransaksi"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/users/payment/delete": {
+            "delete": {
                 "security": [
                     {
                         "BearerAuth": []
@@ -168,9 +371,48 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Order Management"
+                    "Customer Management"
                 ],
                 "summary": "Cancal Transaksi",
+                "parameters": [
+                    {
+                        "description": "insert data",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.CancelTransaksi"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/users/payment/update": {
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Payment Order pada product",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Customer Management"
+                ],
+                "summary": "Payment Order",
                 "parameters": [
                     {
                         "description": "insert data",
@@ -192,19 +434,99 @@
                 }
             }
         },
-        "/example": {
+        "/api/users/transaksi/list": {
             "get": {
-                "description": "Get example",
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Cancal Order pada product",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Get example",
-                "operationId": "get-example",
+                "tags": [
+                    "Customer Management"
+                ],
+                "summary": "Get List Transaksi By Status",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "default": 0,
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "default": 0,
+                        "description": "Items per page",
+                        "name": "size",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Filter status",
+                        "name": "status",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Filter userId",
+                        "name": "user_id",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "ok",
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/users/update": {
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Admin Dapat merubah role pada akun, Admin tidak dapat merubah role pada akun",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Customer Management"
+                ],
+                "summary": "Update Akun",
+                "parameters": [
+                    {
+                        "description": "insert data",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.Login"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object"
                         }
                     }
                 }
@@ -212,6 +534,47 @@
         }
     },
     "definitions": {
+        "request.AcceptTransaksi": {
+            "type": "object",
+            "properties": {
+                "transaksiId": {
+                    "type": "string"
+                }
+            }
+        },
+        "request.CancelTransaksi": {
+            "type": "object",
+            "properties": {
+                "transaksiId": {
+                    "type": "string"
+                }
+            }
+        },
+        "request.CreateProduct": {
+            "type": "object",
+            "properties": {
+                "harga": {
+                    "type": "integer"
+                },
+                "kategori": {
+                    "type": "string"
+                },
+                "nama": {
+                    "type": "string"
+                }
+            }
+        },
+        "request.CreateTransaksi": {
+            "type": "object",
+            "properties": {
+                "productId": {
+                    "type": "string"
+                },
+                "quantity": {
+                    "type": "integer"
+                }
+            }
+        },
         "request.Login": {
             "type": "object",
             "properties": {
@@ -246,10 +609,27 @@
                 "password": {
                     "type": "string"
                 },
-                "role": {
-                    "type": "string"
+                "roleId": {
+                    "type": "integer"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "request.UpdateProduct": {
+            "type": "object",
+            "properties": {
+                "harga": {
+                    "type": "integer"
+                },
+                "kategori": {
+                    "type": "string"
+                },
+                "nama": {
+                    "type": "string"
+                },
+                "productId": {
                     "type": "string"
                 }
             }
