# service/model/request/transaksi.go
@@ -1,10 +1,7 @@
 package request
 
 type CreateTransaksi struct {
-	Id        string `json:"id"`
-	UserId    string `json:"userId"`
 	ProductId string `json:"productId"`
-	Status    string `json:"status"`
 	Quantity  int    `json:"quantity"`
 }
 
@@ -14,5 +11,9 @@ type PaymentTransaksi struct {
 }
 
 type CancelTransaksi struct {
+	TransaksiId string `json:"transaksiId"`
+}
+
+type AcceptTransaksi struct {
 	TransaksiId string `json:"transaksiId"`
 }
