# service/model/transaksi.go
@@ -5,6 +5,7 @@ import "time"
 type Transaksi struct {
 	Id          string     `json:"id"`
 	UserId      string     `json:"userId"`
+	ProductId   string     `json:"productId"`
 	NamaProduct string     `json:"namaProduct"`
 	Status      string     `json:"status"`
 	Total       int        `json:"total"`
